--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,11 @@ build/
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
 !**/src/test/**/build/
-
+gradle/
+gradlew
+gradlew.bat
 ### IntelliJ IDEA ###
+.idea
 .idea/modules.xml
 .idea/jarRepositories.xml
 .idea/compiler.xml
@@ -40,3 +43,4 @@ bin/
 
 ### Mac OS ###
 .DS_Store
+/.idea/
