--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,8 @@ repositories {
 }
 
 dependencies {
+    // https://mvnrepository.com/artifact/com.google.code.gson/gson
+    implementation 'com.google.code.gson:gson:2.8.9'
     testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
 }
@@ -24,10 +26,3 @@ test {
 run {
     mainClass = 'Main'
 }
-
-task rand(type: JavaExec) {
-    description 'Demonstrate Randomness'
-    mainClass = 'randomness.Generator'
-    classpath = sourceSets.main.runtimeClasspath
-}
-
